# alpha-lab

./: .gitignore  README.md  backtest.py  features.py  legendre.py  load.py  prev_backtest.py  pyproject.toml  pytest.ini  requirements.txt  stat_arb.py  temp.py  train.ipynb  train.py  utils.py
alpha_lab/: cli.py
alpha_lab/backtest/: account.py  bot.py  data.py  main.py  model_entrypoint.py  order.py  result.py  simulation.py
alpha_lab/backtest/old/simulation/: __init__.py  data.py  simulation.py
alpha_lab/backtest/simulation/: account.py
alpha_lab/models/: features.py  train.py
alpha_lab/strategies/: _template.py  buy_limit.py  first.py  hold.py  log_reg.py  ma_cross.py  rsi.py  second.py  st.py  trend_gate.py  vbc.py
alpha_lab/utils/: __init__.py  data.py  load.py  models.py  preprocess.py  preprocessing.py
backtest/: account.py  backtest.py  config.py  main.py  model_entrypoint.py  orders.py  trade_signals.py
backtest/simulation/: __init__.py  account.py  data.py  result.py  simulate.py  simulation.py
models/: train.py
stat_arb/: filter_spread.py  load.py  plot.py  plot_rolling.py  stats.py  utils.py
tests/: test_sim_can_run.py
utils/: __init__.py  label.py  load.py  preprocess.py
