[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-lab"
version = "0.1.0"
description = "Alpha Lab CLI"
authors = [{name = "Gun"}]
requires-python = ">=3.9"

[project.scripts]
alpha_lab = "alpha_lab.cli:main"

[tool.setuptools]
packages = ["alpha_lab"]
